Fix notebook show page spilling over frame. Remove nb/tag seletion from new note until implemented

--- a/app/assets/stylesheets/components/notebooks/notebook_show.scss
+++ b/app/assets/stylesheets/components/notebooks/notebook_show.scss
@@ -1,3 +1,9 @@
+.notebook-show {
+  width: 350px;
+  height: 90%;
+  border-right: 1px solid $index-border;
+}
+
 .nb-show-header {
   height: 205px;
   width: 350px;
